tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__StoringYourMEDat-AAAAAAAAAAAAAAAAAAAFDA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1292,
  "prerequisites": [
    183,
    184
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A block designed to do one thing, store storage cells. This block holds 10 storage cells so you can tightly pack your storage into a very small space. ME drives show their contents and the storage cell status on the front of the drive face.\n\nRed - Indicates the storage cell is full.\nOrange - Indicates the storage cell cannot hold any more types, but it can store more items.\nGreen - Indicates the cell can hold more types, or more items.\nBlack - Indicates there is no channel, or power is offline.\n\nIt's important to note, that without an ME Network this block does nothing. It's only useful when combined with a way to input, and output items, and requires 2 AE/t power to function, and additional power for each storage cell stored inside it.\n\nAbout Priority: Many devices in AE2 have a priority setting, this determines what gets items first. This is useful in some situations, but not so much in others. Higher number = higher priority.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Storing Your ME Data",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    183,
    184
  ],
  "rewards": [],
  "tasks": []
}
