tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__ToolsoftheTrade-AAAAAAAAAAAAAAAAAAAJ6Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2537,
  "prerequisites": [
    1292
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Network Tool is AE2's main utility tool.\n\nRight-click on a network to see the power usage, and what makes up the network.\nRight-click on air to interact with its inventory to store cards or turn facades transparent.\nShift-right-click to remove fixtures (import bus, interface, etc.) that don't take up a full block without removing the cable, or remove any AE block immediately the same way.\n\nThe Network Visualizer does exactly what it says, it allows you to visualize the channels of your network. First, right-click a network to select it. At first you'll see everything, but you can change the modes by holding shift and scrolling the mouse wheel up or down to see different things. Remember that if you have a subnetwork, like one that P2P tunnels go through for example, those nodes won't show up since it's a different network, but the P2P tunnels entrances and exits will. This goes through solid objects, so you can look at your whole base.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tools of the Trade",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1292
  ],
  "rewards": [],
  "tasks": []
}
